[project]
name = "database-backup-utility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.27.1",
    "boto3>=1.42.4",
    "click>=8.3.1",
    "google-cloud-storage>=3.6.0",
    "loguru>=0.7.3",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "ruff",
    "schedule>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.7.21"]
build-backend = "uv_build"

[project.scripts]
dbu = "database_backup_utility.cli:cli"
